--- a/estilo.css
+++ b/estilo.css
@@ -38,7 +38,7 @@ p {font-size: 12px;}
     height: 100px;
     width: 300px;
     align-items: center;margin-bottom: 20px;
-    }
+    box-shadow: 2px 2px 12px;}
 
 
     .link2 { 
@@ -58,7 +58,7 @@ p {font-size: 12px;}
     height: 100px;
     width: 300px;
     align-items: center;margin-bottom: 20px;
-    }
+    box-shadow: 2px 2px 12px;}
 
 
 
@@ -79,7 +79,7 @@ p {font-size: 12px;}
     height: 100px;
     width: 300px;
     align-items: center;margin-bottom: 20px;
-    }
+    box-shadow: 2px 2px 12px;}
 
 
 
@@ -100,6 +100,7 @@ p {font-size: 12px;}
     height: 100px;
     width: 300px;
     align-items: center;margin-bottom: 150px;
+    box-shadow: 2px 2px 12px;
     }
 
 
