--- a/estilo.css
+++ b/estilo.css
@@ -10,7 +10,9 @@ padding-top: 50px;
 padding-bottom: 30px;}
 
 h1 { font-size: 20px;}
-p {font-size: 12px;}
+p {font-size: 12px;
+    padding-left: 80px;
+    padding-right: 80px;}
 
 
 .box { display: flex;
